@@ -78,6 +78,31 @@
     </Function>
 
     <Function>
+      <Name>SEARCH</Name>
+      <Type>Int</Type>
+      <Parameter>
+	<Comment>The text you want to find</Comment>
+	<Type>String</Type>
+      </Parameter>
+      <Parameter>
+	<Comment>The text which may contain find_text</Comment>
+	<Type>String</Type>
+      </Parameter>
+      <Parameter>
+	<Comment>Specified index to start the search</Comment>
+	<Type>Int</Type>
+      </Parameter>
+      <Help>
+	<Text>The SEARCH() function finds one text string (find_text) within another text string (within_text) and returns the number of the starting point of find_text, from the leftmost character of within_text. You can use wildcard characters, question mark (?) and asterisk (*). A question mark matches any single character, an asterisk matches any sequences of characters. Parameter start_num specifies the character at which to start the search. The first character is character number 1. If start_num is omitted, it is assumed to be 1. SEARCH does not distinguish between uppercase and lowercase letters.
+</Text>
+	<Syntax>SEARCH(find_text,within_text,start_num)</Syntax>
+	<Example>SEARCH("e";"Statements";6) returns 7</Example>
+	<Example>SEARCH("margin"s;,"Profit Margin") returns 8</Example>
+        <Related>FIND</Related>
+      </Help>
+    </Function>
+
+    <Function>
       <Name>T</Name>
       <Type>String</Type>
       <Parameter>
@@ -199,23 +224,24 @@
       <Name>FIND</Name>
       <Type>Int</Type>
       <Parameter>
-	<Comment>find_text</Comment>
+	<Comment>The text you want to find</Comment>
 	<Type>String</Type>
       </Parameter>
       <Parameter>
-	<Comment>within_text</Comment>
+	<Comment>The text which may contain find_text</Comment>
 	<Type>String</Type>
       </Parameter>
       <Parameter optional="true">
-	<Comment>start_num</Comment>
+	<Comment>Specifies index to start the search</Comment>
 	<Type>Int</Type>
       </Parameter>
       <Help>
-	<Text>The FIND() function finds one text string (find_text) within another text string (within_text) and returns the number of the starting point of find_text, from the leftmost character of within_text. Parameter start_num specifies the character at which to start the search. The first character is character number 1. If start_num is omitted, it is assumed to be 1.</Text>
+	<Text>The FIND() function finds one text string (find_text) within another text string (within_text) and returns the number of the starting point of find_text, from the leftmost character of within_text. Parameter start_num specifies the character at which to start the search. The first character is character number 1. If start_num is omitted, it is assumed to be 1. You can also use function SEARCH, but unlike SEARCH, FIND is case-sensitive and does not allow wildcard characters.</Text>
 	<Syntax>FIND(find_text;within_text;start_num)</Syntax>
 	<Example>FIND("KOf";"KOffice") returns 1</Example>
 	<Example>FIND("i";"KOffice") returns 5</Example>
 	<Example>FIND("K";"KSpread in KOffice";4) returns 12</Example>
+        <Related>SEARCH</Related>
         <Related>REPLACE</Related>
       </Help>
     </Function>
